<resources>
    <string name="app_name">آلة حاسبة متقدمة</string>
    <string name="hint_expression">0</string>
    <string name="hint_result">0</string>
    
    <string name="btn_c">C</string>
    <string name="btn_ac">AC</string>
    <string name="btn_lparen">(</string>
    <string name="btn_rparen">)</string>
    <string name="btn_div">÷</string>
    <string name="btn_mul">×</string>
    <string name="btn_sub">-</string>
    <string name="btn_add">+</string>
    <string name="btn_eq">=</string>
    <string name="btn_dot">.</string>
    
    <string name="btn_sin">sin</string>
    <string name="btn_cos">cos</string>
    <string name="btn_tan">tan</string>
    <string name="btn_log">log</string>
    <string name="btn_ln">ln</string>
    <string name="btn_sqrt">√</string>
    <string name="btn_pow">^</string>
    <string name="btn_pi">π</string>
    <string name="btn_e">e</string>
    <string name="btn_fact">!</string>
</resources>